Revert "Changed alignment of slideshow controls to prevent wrapping oddities"
This reverts commit 135178fffa3346366ad47b8e7a2fe9f786c612bf.

--- a/site/assets/css/kbp-internal.scss
+++ b/site/assets/css/kbp-internal.scss
@@ -140,15 +140,8 @@ article .content {
 }
 
 .slideshowControls {
-    width: 100%;
-    display: block;
-    text-align: right;
-}
-
-.slideControl {
-    display: inline-block;
-    text-indent: 999em;
-    overflow: hidden;
+    margin-left: calc(20vw + 1rem);
+    width: calc(100% - 20vw - 1rem);
 }
 
 .slide .vertical {
@@ -182,7 +175,7 @@ article .content {
 }
 
 #overlay .slideshowControls {
-    text-align: center;
+    justify-content: center;
     margin: 0;
     width: auto;
 }
